--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">茶百科</string>
     <string name="action_settings">Settings</string>
-
+    <string name="tx_about_us_logo">买买茶.茶百科</string>
+    <string name="tx_about_us_version">当前版本：%s</string>
+    <string name="tx_about_us_copyright">Copyright@2010-2013 MaiMaiCha.com\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;华夏茶联 版权所有</string>
 </resources>
